--- a/src/components/missionBlock/MissionBlock.stories.mdx
+++ b/src/components/missionBlock/MissionBlock.stories.mdx
@@ -10,7 +10,7 @@ MissionBlock component.
 <Props of={MissionBlock} />
 
 export const Template = (args) => (
-  <MissionBlock taskName={args.taskName} group={args.group} deadline={args.deadline} status={args.status} percentageCompleted={args.percentageCompleted} />
+  <MissionBlock taskName={args.taskName} group={args.group} deadline={args.deadline} status={args.status} percentageCompleted={args.percentageCompleted} backgroundColor={args.backgroundColor} progressBarColor={args.progressBarColor} />
 );
 
 ## Basic
