Default colors added with null checkers

--- a/src/components/taskProgressBar/TaskProgressBar.stories.mdx
+++ b/src/components/taskProgressBar/TaskProgressBar.stories.mdx
@@ -16,7 +16,7 @@ export const Template = (args) => (
 ## Basic
 <Canvas>
   <Story 
-    name="0% - NO TEXT"
+    name="50% - Standard"
      argTypes={{
       percentage: 
         { control: { type: 'number', min:0, max:100, step: 1 } } 
@@ -24,9 +24,9 @@ export const Template = (args) => (
     }}
    
     args={{
-        percentage : 0,
-        childBackgroundColor :'red',
-        parentBackgroundColor : 'blue'
+        percentage : 50,
+        childBackgroundColor :'#00d715',
+        parentBackgroundColor : '#96ff9d'
         
     }}
      
@@ -36,5 +36,5 @@ export const Template = (args) => (
   </Story>
 </Canvas>
 
-<ArgsTable story="0% - NO TEXT" />
+<ArgsTable story="50% - Standard" />
 
