Docs, default color white

--- a/src/components/userInfo/UserInfo.stories.mdx
+++ b/src/components/userInfo/UserInfo.stories.mdx
@@ -31,7 +31,7 @@ export const Template = (args) => (
       },
       textColor: {
         table: {
-          defaultValue: { summary: 'grey' },
+          defaultValue: { summary: 'white' },
         },
       },
     }}
