--- a/src/components/missionBlock/MissionBlock.stories.mdx
+++ b/src/components/missionBlock/MissionBlock.stories.mdx
@@ -10,7 +10,7 @@ MissionBlock component.
 <Props of={MissionBlock} />
 
 export const Template = (args) => (
-  <MissionBlock taskName={args.taskName} group={args.group} deadline={args.deadline} status={args.status} percentageCompleted={args.percentageCompleted} backgroundColor={args.backgroundColor} progressBarColor={args.progressBarColor} />
+  <MissionBlock taskName = {args.taskName} group = {args.group} deadline = {args.deadline} status={ args.status} percentageCompleted={args.percentageCompleted} backgroundColor={args.backgroundColor} progressBarColor={args.progressBarColor} />
 );
 
 ## Basic
@@ -18,11 +18,14 @@ export const Template = (args) => (
   <Story 
     name="Basic"   
     args={{
-      taskName: "Example Name",
+     // task :{
+        taskName: "Example Name",
       group: "FP DUAL ALTIA",
       deadline: new Date("2023-06-27T00:00:00.000Z"),
       status: "En Curso",
       percentageCompleted: 80
+   //   }
+      
     }}
      
   
