--- a/src/components/navBar/NavBar.stories.mdx
+++ b/src/components/navBar/NavBar.stories.mdx
@@ -12,7 +12,7 @@ This component is the NavBar that is common to all web screens. At the moment it
 <Props of={NavBar} />
 
 
-export const Template = (args) => <NavBar parentBackgroundColor={args.parentBackgroundColor} childBackgroundColor={args.childBackgroundColor}/>;
+export const Template = (args) => <NavBar parentBackgroundColor={args.parentBackgroundColor} childBackgroundColor={args.childBackgroundColor} icons={args.icons}/>;
 
 ## Basic
 <Canvas>
