change language in one sentence

--- a/src/components/dateSelect/DateSelect.stories.mdx
+++ b/src/components/dateSelect/DateSelect.stories.mdx
@@ -14,7 +14,7 @@ The DateSelect component is a mobile-friendly date and time picker.
   <Story 
       name="Basic"
       args={{
-        label : "Seleccione fecha",
+        label : "Pick a date",
         fontSize : 16
       }}
   >
