Comments component done

--- a/src/components/visualComments/VisualComments.stories.mdx
+++ b/src/components/visualComments/VisualComments.stories.mdx
@@ -19,7 +19,7 @@ Componente de comentarios visual.
         imageSrc: 'https://www.semana.com/resizer/AhOjY7VO50nkdLUyhuzX2HcLZuc=/fit-in/768x0/smart/filters:format(jpg):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/semana/KVRYJNDM6FGKPGL6WXPO26HFUA.png',
         photoBorderColor: '#FF1493',
         username: 'Pepe',
-        comment: 'This is a test comment',
+        comment: 'This is a test commentfasasasasasasasasasasasasasasasasasasasasas af sf e ew fha bfw fwgyi fgwywe wgey fgwf gwygwfvww w fiwgfwiufwiu fbwi vfwiy vfweiyt fvweyigfvwyi fvw fw wv fwe vfwi ',
       },
     }}
   >
