--- a/src/components/postComment/PostComment.stories.mdx
+++ b/src/components/postComment/PostComment.stories.mdx
@@ -1,18 +1,18 @@
 import { Meta, Story, Canvas, Props, ArgsTable } from '@storybook/addon-docs';
-import { postComment } from './PostComment';
+import { PostComment } from './PostComment';
 
 <Meta 
   title="Components/Content/PostComment" 
-  component={postComment}
+  component={PostComment}
 />
 
 # postComment
 
-Documentation for the `postComment` component.
+Documentation for the `PostComment` component.
 
 ## Props 
 
-<ArgsTable of={postComment} />
+<ArgsTable of={PostComment} />
 
 ## Basic Usage
 
@@ -20,7 +20,7 @@ Documentation for the `postComment` component.
   <Story name="Basic">
     {() => (
       <div style={{ display: 'flex', alignItems: 'center', justifyContent: 'center' }}>
-        {postComment({
+        {PostComment({
           commentProps: {
             height: 50,
             width: 200,
