#36 Dot style function created (more comprobations needed)

--- a/src/components/roadmap/roadmap.stories.mdx
+++ b/src/components/roadmap/roadmap.stories.mdx
@@ -30,8 +30,9 @@ export const Template = (args) => (
       level: 3,
       status: 'EN_CURSO',
       style: {
-        circleSize: 10,
-        circleColor: 'blue',
+        dotHeight: 18,
+        dotWidth: 18,
+        dotColor: '#8394c4',
         lineColor: 'grey',
         lineHeight: 40,
       },
