#36 Version 2 documentation & logic (scss adjustments pending)

--- a/src/components/roadmap/roadmap.stories.mdx
+++ b/src/components/roadmap/roadmap.stories.mdx
@@ -10,7 +10,12 @@ Component tha includes information about the users tasks and level ups
 <Props of={Roadmap} />
 
 export const Template = (args) => (
-  <Roadmap task={args.task} style={args.style} />
+  <Roadmap
+    date={args.date}
+    name={args.name}
+    difficulty={args.difficulty}
+    bigStyle={args.bigStyle}
+  />
 );
 
 ## Basic
@@ -19,20 +24,10 @@ export const Template = (args) => (
   <Story
     name="Basic"
     args={{
-      task: {
-        taskCreationDate: '2023-03-30',
-        taskStartDate: '2023-03-31',
-        taskFinishDate: '2023-04-10',
-        name: 'Task name',
-        points: 100,
-      },
-      style: {
-        dotHeight: 18,
-        dotWidth: 18,
-        dotColor: '#8394c4',
-        lineColor: 'grey',
-        lineHeight: 40,
-      },
+      date: '2023-04-10',
+      name: 'Task name',
+      difficulty: 100,
+      bigStyle: false,
     }}
   >
     {Template.bind({})}
