user atributtes renamed

--- a/src/components/podium/Podium.stories.mdx
+++ b/src/components/podium/Podium.stories.mdx
@@ -19,24 +19,24 @@ export const Template = ({ users }) => <Podium users={users} />;
     args={{
       users: [
         {
-          userImg:
+          userPicUrl:
             'https://elireview.com/wp-content/uploads/2016/12/reed-profile-square.jpg',
           userColor: 'red',
-          username: 'marinasc',
+          name: 'marinasc',
           userPoints: '120',
         },
         {
-          userImg:
+          userPicUrl:
             'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTX48DTma6JzBvRjAy2fQRZMXZmWq5iNlVryn0S7oc&s',
           userColor: 'green',
-          username: 'ricardo84',
+          name: 'ricardo84',
           userPoints: '180',
         },
         {
-          userImg:
+          userPicUrl:
             'https://profilemagazine.com/wp-content/uploads/2020/04/Ajmere-Dale-Square-thumbnail.jpg',
           userColor: 'blue',
-          username: 'gonzalo00',
+          name: 'gonzalo00',
           userPoints: '100',
         },
       ],
