--- a/src/components/teamDropdown/teamDropdown.stories.mdx
+++ b/src/components/teamDropdown/teamDropdown.stories.mdx
@@ -1,29 +1,52 @@
 import { Meta, Story, Canvas, Props, ArgsTable } from '@storybook/addon-docs';
 import { TeamDropdown, TeamDropdownProps } from './TeamDropdown';
 
-<Meta 
-    title="Components/Menus/TeamDropdown" 
-    component={TeamDropdown} 
-/>
+<Meta title="Components/Menus/TeamDropdown" component={TeamDropdown} />
 
 # TeamDropdown
+
 Component that shows team members profiles.
 
 <Props of={TeamDropdown} />
+
+export const Template = (args) => (
+  <TeamDropdown
+    title={args.title}
+    userInfoProps={args.userInfoProps}
+    bgColor={args.bgColor}
+  />
+);
 
 ## Use example
 
 This is a basic example on how to use the component `TeamDropdown`.
 
 <Canvas>
-  <Story 
+  <Story
     name="Basic example"
     args={{
       title: 'Development team',
-      data: [{ name: 'John Doe' }, { name: 'Jane Doe' }],
+      userInfoProps: [
+        {
+          user: {
+            username: 'Users Name',
+            userImg:
+              'https://www.semana.com/resizer/AhOjY7VO50nkdLUyhuzX2HcLZuc=/fit-in/768x0/smart/filters:format(jpg):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/semana/KVRYJNDM6FGKPGL6WXPO26HFUA.png',
+            userColor: 'yellow',
+            description: 'this is a brief description by the user',
+            totalPoints: 300,
+            level: 2,
+            contactsNumber: 40,
+            currentTasks: 3,
+          },
+          backgroundColor: 'red',
+          textColor: 'black'
+        },
+      ],
+      bgColor: 'yellow'
     }}
-   >
-    {(args) => <TeamDropdown {...args} />}
+>
+    {Template.bind({})}
   </Story>
 </Canvas>
 
