--- a/src/components/profileProgressBar/ProfileProgressBar.stories.mdx
+++ b/src/components/profileProgressBar/ProfileProgressBar.stories.mdx
@@ -1,35 +1,41 @@
 import { Meta, Story, Canvas, Props, ArgsTable } from '@storybook/addon-docs';
 import { ProfileProgressBar } from './ProfileProgressBar';
 
-<Meta 
-    title="Components/Content/ProfileProgressBar" 
-    component={ProfileProgressBar}
+<Meta
+  title="Components/Content/ProfileProgressBar"
+  component={ProfileProgressBar}
 />
 
 # ProfileProgressBar
+
 ProfileProgressBar component.
 
 <Props of={ProfileProgressBar} />
 
-
-export const Template = (args) => <ProfileProgressBar completed={args.completed} bgColor={args.bgColor} completedColor={args.completedColor}/>;
+export const Template = (args) => (
+  <ProfileProgressBar
+    progress={args.progress}
+    bgColor={args.bgColor}
+    progressColor={args.progressColor}
+    level={args.level}
+    points={args.points}
+    textColor={args.textColor}
+  />
+);
 
 ## Basic
+
 <Canvas>
-  <Story 
+  <Story
     name="Basic"
     args={{
-        completed : 'Percentage completed'
-        
+      progress: 'Percentage completed',
     }}
-     argTypes={{
-      completed: 
-        { control: { type: 'number', min:0, max:100, step: 1 } } 
-      
+    argTypes={{
+      progress: { control: { type: 'number', min: 0, max: 100, step: 1 } },
     }}
-  
-   >
-        {Template.bind({})}
+  >
+    {Template.bind({})}
   </Story>
 </Canvas>
 
