--- a/src/components/profileProgressBar/ProfileProgressBar.stories.mdx
+++ b/src/components/profileProgressBar/ProfileProgressBar.stories.mdx
@@ -33,6 +33,8 @@ export const Template = (args) => (
     }}
     argTypes={{
       progress: { control: { type: 'number', min: 0, max: 100, step: 1 } },
+      level: { control: { type: 'number', min: 0 } },
+      points: { control: { type: 'number' } },
     }}
   >
     {Template.bind({})}
